made updates to description

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
           exploring the use of innovative technology to improve the lives of those living with mental health challenges and their communities.
           My honors thesis is using NLG with the goal of aiding peer counselors in generating messages employing the clinical skill of reflection.  
           In Summer 2021, I conducted research at <a href="https://www.hcii.cmu.edu/">Carnegie Mellon’s Human-Computer Interaction Institute</a>, developing a platform for training nurses to conduct 
-          motivational interviewing. I have continued research on the project, framing the evidence-based design rationale for the developed prototype.</p>
+          motivational interviewing. I have continued research on the project, framing the evidence-based design rationale for the developed prototype. 
+          This summer I will be conducting research at University of Washington through the <a href="https://dub.washington.edu/">Design, Use, Build</a> initiative.</p>
         
         <p>I have spent time at non-profits, startups, and mid-size companies. I focused on the search and selection of entrepreneurs at <a href="https://endeavor.org/">Endeavor</a>,
           building a curriculum to help empower the next generation of socially impactful entrepreneurs at <a
