--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <p><b>Fulphil: Project Management | Aug. 2019 - June 2020</b><br>
         Created social entrepreneurship curriculum for distribution in schools across the nation and explored competitive offerings. 
         Curriculum included design thinking, stakeholder analysis, user interviews, understanding competition, KPIs, pricing, branding, UN SDGs, entrepreneurial mindset.
-        <a href="https://fulphil.teachable.com/p/social-entrepreneurship">Curriculum</a>.</p>
+        <a href="https://fulphil.teachable.com/p/social-entrepreneurship">Curriculum</a>. <a href="https://issuu.com/tiffany.yau/docs/12_10_impact_report_design_draft__2_">Impact report</a>.</p>
 
         <h2>Other Data Projects</h2>
         <p><b>Mental Health Support on Reddit</b><br>
