added to description

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <section>
         <p>I’m an undergraduate senior graduating in December 2022 from Los Angeles studying Statistics, Cognitive Science, and Computer Science at 
         <a href="https://www.wharton.upenn.edu/">The Wharton School</a> and the
-        <a href="https://www.upenn.edu/">University of Pennsylvania</a>.</p>
+        <a href="https://www.upenn.edu/">University of Pennsylvania</a> through a dual degree.</p>
 
         <p>My interests exist at the intersection of research, technology, entrepreneurship, and social impact. 
           My research experience lies within human-computer interaction and computational social science. I am especially excited by research 
