--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
         <p><a href="mailto:emoneil@wharton.upenn.edu">emoneil@wharton.upenn.edu</a></p>
         <img src="./images/profile-pic.jpeg" style="width:200px;height:200px;"/><br>
         <img src="./images/linkedin.png" alt="Linkedin" style="width:15px;height:15px;padding-right:10px;"><a href="https://www.linkedin.com/in/emma-oneil/">LinkedIn</a><br>
-        <img src="./images/resume.png" alt="PDF Resume" style="width:15px;height:15px;padding-right:10px;"><a href="https://drive.google.com/file/d/1Bbb9UGUp8s93wiHM5RBZHhHmAjxH2LIw/view?usp=sharing">PDF Resume</a>
+        <img src="./images/resume.png" alt="PDF Resume" style="width:15px;height:15px;padding-right:10px;"><a href="https://drive.google.com/file/d/1SZxePFS0vFrcHsTaRCysxvi8lB3r5OS1/view?usp=sharing">PDF Resume</a>
       </header>
       <section>
-        <p>I’m an undergraduate senior graduating in December 2022 from Los Angeles studying Statistics, Cognitive Science, and Computer Science at 
+        <p>I'm an undergraduate senior graduating in December 2022 from Los Angeles studying Statistics, Cognitive Science, and Computer Science at 
         <a href="https://www.wharton.upenn.edu/">The Wharton School</a> and the
         <a href="https://www.upenn.edu/">University of Pennsylvania</a> through a dual degree.</p>
 
         <p>My interests exist at the intersection of research, technology, entrepreneurship, and social impact. 
-          My research experience lies within human-computer interaction and computational social science. I am especially excited by research 
+          My research experience lies within human-computer interaction, natural language processing, and computational social science. I am especially excited by research 
           exploring the use of innovative technology to improve the lives of those living with mental health challenges and their communities.
-          My honors thesis is using NLG with the goal of aiding peer counselors in generating messages employing the clinical skill of reflection.  
-          In Summer 2021, I conducted research at <a href="https://www.hcii.cmu.edu/">Carnegie Mellon’s Human-Computer Interaction Institute</a>, developing a platform for training nurses to conduct 
-          motivational interviewing. I have continued research on the project, framing the evidence-based design rationale for the developed prototype. 
-          This summer I will be conducting research at University of Washington through the <a href="https://dub.washington.edu/">Design, Use, Build</a> initiative.</p>
+          My honors thesis involved the use of natural language generation with the goal of aiding peer counselors in generating messages employing the clinical skill of reflection.  
+          In Summer 2021, I conducted research at <a href="https://www.hcii.cmu.edu/">Carnegie Mellon's Human-Computer Interaction Institute</a>, developing a platform for training nurses to conduct 
+          motivational interviewing. In the following academic year, I continued research on the project, framing the evidence-based design rationale for the developed prototype. 
+          This summer I am conducting research at University of Washington through the <a href="https://dub.washington.edu/">Design, Use, Build</a> alliance.</p>
         
         <p>I have spent time at non-profits, startups, and mid-size companies. I focused on the search and selection of entrepreneurs at <a href="https://endeavor.org/">Endeavor</a>,
           building a curriculum to help empower the next generation of socially impactful entrepreneurs at <a
@@ -57,12 +57,15 @@
 
         <h2>Research</h2>
 
-        <p><b>Honors Thesis in Cognitive Science | Aug. 2021 -</b><br>
-        Application of natural language generation for peer-to-peer counseling. Primary advisor is Prof. Lyle Ungar.</p>
+        <p><b>UW Design, Use, Build Alliance REU Fellow | June 2022 -</b><br>
+        Conducting language analysis of user reviews of mental health apps to relate to <a href="https://onemindpsyberguide.org/">One Mind PsyberGuide</a> reviews and expert feedback. Primarily advised by Prof. Gary Hsieh.</p>
+
+        <p><b>Honors Thesis in Cognitive Science | Aug. 2021 - May 2021</b><br>
+        Applied natural language generation to aid peer counselors in generating messages employing reflection. Primarily advised by Prof. Lyle Ungar.</p>
 
         <p><b>CMU Human-Computer Interaction Institute Research | Aug. 2021 -</b><br>
-        Research for design rationale of training platform for nurses learning motivational interviewing including
-        exploring applications of role-playing, peer feedback, and reflection. Working with PhD student Tianying Chen.</p>
+        Research and write on design rationale of training platform for nurses learning motivational interviewing including
+        the application of role-playing, peer feedback, and reflection. Working with PhD student Tianying Chen.</p>
 
         <p><b>CMU Human-Computer Interaction Institute REU Fellow | June - Aug. 2021</b><br>
         Developed interactive <a href="https://pinmi-summer.netlify.app/">prototype</a> for platform to train nurses learning motivational interviewing. 
@@ -84,13 +87,12 @@
         researching and presenting female and minority-founded companies with diverse technology applications to selection team.</p>
 
         <p><b>ServiceNow: Value Management | May 2020 - Aug. 2020</b><br>
-        Created executive summaries for 15+ customers across industries and anonymized template for 
-        use by external marketing team. Pioneered database of insights from 
+        Created executive summaries for 15+ customers across industries. Pioneered database of insights from 
         customer-led presentations from the <a href="https://knowledge.servicenow.com/">Knowledge 2020 digital conference</a>. 
         Created product demos for the Value Management Platform.</p>
 
         <p><b>Fulphil: Project Management | Aug. 2019 - June 2020</b><br>
-        Created social entrepreneurship curriculum for distribution in schools across the nation and explored competitive offerings. 
+        Created social entrepreneurship curriculum for schools nationwide and explored competitive offerings. 
         Curriculum included design thinking, stakeholder analysis, user interviews, understanding competition, KPIs, pricing, branding, UN SDGs, entrepreneurial mindset.
         <a href="https://fulphil.teachable.com/p/social-entrepreneurship">Curriculum</a>. <a href="https://issuu.com/tiffany.yau/docs/12_10_impact_report_design_draft__2_">Impact report</a>.</p>
 
