--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <header>
         <h1>Emma O'Neil</h1>
         <p><a href="mailto:emoneil@wharton.upenn.edu">emoneil@wharton.upenn.edu</a></p>
-        <img src="./images/profile-pic.jpeg" style="width:200px;height:200px;"/><br>
+        <img src="./images/profile-pic.jpg" style="width:200px;height:200px;"/><br>
         <img src="./images/linkedin.png" alt="Linkedin" style="width:15px;height:15px;padding-right:10px;"><a href="https://www.linkedin.com/in/emma-oneil/">LinkedIn</a><br>
         <img src="./images/resume.png" alt="PDF Resume" style="width:15px;height:15px;padding-right:10px;"><a href="https://drive.google.com/file/d/1SZxePFS0vFrcHsTaRCysxvi8lB3r5OS1/view?usp=sharing">PDF Resume</a>
       </header>
