update uw description

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
         <h2>Research</h2>
 
         <p><b>UW Design, Use, Build Alliance REU Fellow | June 2022 -</b><br>
-        Conducting language analysis of user reviews of mental health apps to relate to <a href="https://onemindpsyberguide.org/">One Mind PsyberGuide</a> reviews and expert feedback. Primarily advised by Prof. Gary Hsieh.</p>
+          Relating language of user reviews of mental health apps to expert ratings of credibility and user experience by  <a href="https://onemindpsyberguide.org/">One Mind PsyberGuide</a>. Advised by Profs. Gary Hsieh and Tanu Mitra.
+          <a href="https://drive.google.com/file/d/1UTkPYxacM4jdmFDegQs642QW6Jlmwi3B/view?usp=sharing">Poster</a>
+        </p>
 
         <p><b>Honors Thesis in Cognitive Science | Aug. 2021 - May 2021</b><br>
         Applied natural language generation to aid peer counselors in generating messages employing reflection. Primarily advised by Prof. Lyle Ungar.</p>
