--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           My honors thesis involved the use of natural language generation with the goal of aiding peer counselors in generating messages employing the clinical skill of reflection.  
           In Summer 2021, I conducted research at <a href="https://www.hcii.cmu.edu/">Carnegie Mellon's Human-Computer Interaction Institute</a>, developing a platform for training nurses to conduct 
           motivational interviewing. In the following academic year, I continued research on the project, framing the evidence-based design rationale for the developed prototype. 
-          This summer I am conducting research at University of Washington through the <a href="https://dub.washington.edu/">Design, Use, Build</a> alliance.</p>
+          In Summer 2022, I conducted language analysis relating user reviews and expert ratings of mental health apps at University of Washington through the <a href="https://dub.washington.edu/">Design, Use, Build</a> alliance.</p>
         
         <p>I have spent time at non-profits, startups, and mid-size companies. I focused on the search and selection of entrepreneurs at <a href="https://endeavor.org/">Endeavor</a>,
           building a curriculum to help empower the next generation of socially impactful entrepreneurs at <a
@@ -57,7 +57,7 @@
 
         <h2>Research</h2>
 
-        <p><b>UW Design, Use, Build Alliance REU Fellow | June 2022 -</b><br>
+        <p><b>UW Design, Use, Build Alliance REU Fellow | June 2022 - Aug. 2022</b><br>
           Relating language of user reviews of mental health apps to expert ratings of credibility and user experience by  <a href="https://onemindpsyberguide.org/">One Mind PsyberGuide</a>. Advised by Profs. Gary Hsieh and Tanu Mitra.
           <a href="https://drive.google.com/file/d/1UTkPYxacM4jdmFDegQs642QW6Jlmwi3B/view?usp=sharing">Poster</a>
         </p>
@@ -65,9 +65,9 @@
         <p><b>Honors Thesis in Cognitive Science | Aug. 2021 - May 2021</b><br>
         Applied natural language generation to aid peer counselors in generating messages employing reflection. Primarily advised by Prof. Lyle Ungar.</p>
 
-        <p><b>CMU Human-Computer Interaction Institute Research | Aug. 2021 -</b><br>
-        Research and write on design rationale of training platform for nurses learning motivational interviewing including
-        the application of role-playing, peer feedback, and reflection. Working with PhD student Tianying Chen.</p>
+        <p><b>CMU Human-Computer Interaction Institute Research | Aug. 2021 - July 2022</b><br>
+        Researched and wrote on design rationale of training platform for nurses learning motivational interviewing including
+        the application of role-playing, peer feedback, and reflection. Worked with PhD student Tianying Chen.</p>
 
         <p><b>CMU Human-Computer Interaction Institute REU Fellow | June - Aug. 2021</b><br>
         Developed interactive <a href="https://pinmi-summer.netlify.app/">prototype</a> for platform to train nurses learning motivational interviewing. 
@@ -82,7 +82,11 @@
         <p><b>USC Brain and Creativity Institute Research | June 2016 - June 2018</b><br>
         Conducted literature review of the effects of musical training on early reading development. Advised by Prof. Assal Habibi.</p>
 
-        <h2>Internships</h2>
+        <h2>Other Work and Internships</h2>
+        <p><b>Penn Engineering: CIS 399 Teaching Assistant | Aug. 2022 -</b><br>
+          TA for first-ever Human-Computer Interaction undergraduate offering at Penn taught by Prof. Danaë Metaxa. 
+          Hold office hours, grade assignments, design homework rubric, and guide and grade a subset of the team semester projects.</p>
+  
         <p><b>Endeavor: Entrepreneurship Selection & Growth | Dec. 2020 - May 2021</b><br>
         Wrote business profiles to inform evaluation in International Selection Panels, 
         researching business and local context. Pioneered project for targeting socially diverse entrepreneurs, 
