updates to intro and work

--- a/index.html
+++ b/index.html
@@ -26,31 +26,30 @@
     <div class="wrapper">
       <header>
         <h1>Emma O'Neil</h1>
-        <p><a href="mailto:emoneil@wharton.upenn.edu">emoneil@wharton.upenn.edu</a></p>
+        <p><a href="mailto:emmaaoneil@gmail.com">emmaaoneil@gmail.com</a></p>
         <img src="./images/profile-pic.jpg" style="width:200px;height:200px;"/><br>
         <img src="./images/linkedin.png" alt="Linkedin" style="width:15px;height:15px;padding-right:10px;"><a href="https://www.linkedin.com/in/emma-oneil/">LinkedIn</a><br>
-        <img src="./images/resume.png" alt="PDF Resume" style="width:15px;height:15px;padding-right:10px;"><a href="https://drive.google.com/file/d/1SZxePFS0vFrcHsTaRCysxvi8lB3r5OS1/view?usp=sharing">PDF Resume</a>
+        <!-- <img src="./images/resume.png" alt="PDF Resume" style="width:15px;height:15px;padding-right:10px;"><a href="https://drive.google.com/file/d/1SZxePFS0vFrcHsTaRCysxvi8lB3r5OS1/view?usp=sharing">PDF Resume</a> -->
       </header>
       <section>
-        <p>I'm an undergraduate senior graduating in December 2022 from Los Angeles studying Statistics, Cognitive Science, and Computer Science at 
-        <a href="https://www.wharton.upenn.edu/">The Wharton School</a> and the
-        <a href="https://www.upenn.edu/">University of Pennsylvania</a> through a dual degree.</p>
+        <p>I'm a December 2022 dual-degree graduate from <a href="https://www.wharton.upenn.edu/">The Wharton School</a> and the
+          <a href="https://www.upenn.edu/">University of Pennsylvania</a>, where I majored in Statistics, Cognitive Science, and Computer Science and minored in Mathematics.</p>
 
         <p>My interests exist at the intersection of research, technology, entrepreneurship, and social impact. 
-          My research experience lies within human-computer interaction, natural language processing, and computational social science. I am especially excited by research 
+          My research experience lies within human-computer interaction, machine learning, natural language processing, and computational social science. I am especially excited by research 
           exploring the use of innovative technology to improve the lives of those living with mental health challenges and their communities.
           My honors thesis involved the use of natural language generation with the goal of aiding peer counselors in generating messages employing the clinical skill of reflection.  
           In Summer 2021, I conducted research at <a href="https://www.hcii.cmu.edu/">Carnegie Mellon's Human-Computer Interaction Institute</a>, developing a platform for training nurses to conduct 
           motivational interviewing. In the following academic year, I continued research on the project, framing the evidence-based design rationale for the developed prototype. 
           In Summer 2022, I conducted language analysis relating user reviews and expert ratings of mental health apps at University of Washington through the <a href="https://dub.washington.edu/">Design, Use, Build</a> alliance.</p>
         
-        <p>I have spent time at non-profits, startups, and mid-size companies. I focused on the search and selection of entrepreneurs at <a href="https://endeavor.org/">Endeavor</a>,
-          building a curriculum to help empower the next generation of socially impactful entrepreneurs at <a
-          href="https://fulphil.org/">Fulphil</a>, and underscoring customer value in the enterprise software space at <a href="https://www.servicenow.com/">ServiceNow</a>.</p>
+        <p>I have spent time at non-profits, startups, and mid-size companies. I focused on search and selection of entrepreneurs at <a href="https://endeavor.org/">Endeavor</a>,
+          building a curriculum to for empowering the next generation of socially impactful entrepreneurs at <a
+          href="https://fulphil.org/">Fulphil</a>, and underscoring customer value in enterprise software at <a href="https://www.servicenow.com/">ServiceNow</a>.</p>
 
-        <p>Other things I think a lot about are the societal impacts of technology and fostering an inclusive CS community. 
+        <p>Other things I think a lot about are societal impacts of technology and fostering an inclusive CS community. 
           I am passionate about telling stories with data and care a lot about mental health advocacy. 
-          I have been volunteering at crisis hotlines since 2016 and am currently a Crisis Counselor at <a href="https://www.crisistextline.org/">Crisis Textline</a>.
+          I have volunteered at crisis hotlines since 2016 and am currently a Crisis Counselor at <a href="https://www.crisistextline.org/">Crisis Textline</a>.
           My mission is to advance mental health empowerment and support through technology.</p>
 
         <p>View my coursework <a href="https://airtable.com/shrD95EC5EwYTAbmW">here</a>.</p>
@@ -58,8 +57,8 @@
         <h2>Research</h2>
 
         <p><b>UW Design, Use, Build Alliance REU Fellow | June 2022 - Aug. 2022</b><br>
-          Relating language of user reviews of mental health apps to expert ratings of credibility and user experience by  <a href="https://onemindpsyberguide.org/">One Mind PsyberGuide</a>. Advised by Profs. Gary Hsieh and Tanu Mitra.
-          <a href="https://drive.google.com/file/d/1UTkPYxacM4jdmFDegQs642QW6Jlmwi3B/view?usp=sharing">Poster</a>
+          Related language of user reviews of mental health apps to expert ratings of credibility and user experience by  <a href="https://onemindpsyberguide.org/">One Mind PsyberGuide</a>. Advised by Profs. Gary Hsieh and Tanu Mitra.
+          <a href="https://drive.google.com/file/d/1UTkPYxacM4jdmFDegQs642QW6Jlmwi3B/view?usp=sharing">Poster</a>.
         </p>
 
         <p><b>Honors Thesis in Cognitive Science | Aug. 2021 - May 2022</b><br>
@@ -70,8 +69,8 @@
         the application of role-playing, peer feedback, and reflection. Worked with PhD student Tianying Chen.</p>
 
         <p><b>CMU Human-Computer Interaction Institute REU Fellow | June - Aug. 2021</b><br>
-        Developed interactive <a href="https://pinmi-summer.netlify.app/">prototype</a> for platform to train nurses learning motivational interviewing. 
-        Conducted and iterated on design through user testing with nurses at <a href="https://www.highmarkhealth.org/hmk/index.shtml">Highmark Health</a>. Advised by Profs. Laura Dabbish and Robert Kraut.
+        Developed <a href="https://pinmi-summer.netlify.app/">prototype</a> for platform to train nurses learning motivational interviewing. 
+        Iterated on design through user testing with nurses at <a href="https://www.highmarkhealth.org/hmk/index.shtml">Highmark Health</a>. Advised by Profs. Laura Dabbish and Robert Kraut.
         <a href="https://drive.google.com/file/d/1huKhBgcuVSJAw5O4io6QdvJZJvOm1PeU/view?usp=sharing">Poster</a>.</p>
 
         <p><b>MindCORE Lila R. Gleitman Fellow | June 2019 - Aug. 2019</b><br>
@@ -83,14 +82,16 @@
         Conducted literature review of the effects of musical training on early reading development. Advised by Prof. Assal Habibi.</p>
 
         <h2>Other Work and Internships</h2>
-        <p><b>Penn Engineering: CIS 399 Teaching Assistant | Aug. 2022 -</b><br>
+        <p><b>Penn Engineering: CIS 7000 Teaching Assistant | Jan. 2023 -</b><br>
+          TA for Algorithmic Justice graduate level seminar at Penn taught by Prof. Danaë Metaxa.</p>
+
+        <p><b>Penn Engineering: CIS 3990 Teaching Assistant | Aug. 2022 - Dec. 2022</b><br>
           TA for first-ever Human-Computer Interaction undergraduate offering at Penn taught by Prof. Danaë Metaxa. 
-          Hold office hours, grade assignments, design homework rubric, and guide and grade a subset of the team semester projects.</p>
+          Held office hours, graded assignments, designed rubrics, and guided and graded a subset of team semester projects.</p>
   
         <p><b>Endeavor: Entrepreneurship Selection & Growth | Dec. 2020 - May 2021</b><br>
-        Wrote business profiles to inform evaluation in International Selection Panels, 
-        researching business and local context. Pioneered project for targeting socially diverse entrepreneurs, 
-        researching and presenting female and minority-founded companies with diverse technology applications to selection team.</p>
+        Wrote business profiles to inform evaluation in International Selection Panels. Pioneered project for targeting socially diverse entrepreneurs, 
+        researching and presenting female and minority-founded tech companies.</p>
 
         <p><b>ServiceNow: Value Management | May 2020 - Aug. 2020</b><br>
         Created executive summaries for 15+ customers across industries. Pioneered database of insights from 
@@ -99,7 +100,7 @@
 
         <p><b>Fulphil: Project Management | Aug. 2019 - June 2020</b><br>
         Created social entrepreneurship curriculum for schools nationwide and explored competitive offerings. 
-        Curriculum included design thinking, stakeholder analysis, user interviews, understanding competition, KPIs, pricing, branding, UN SDGs, entrepreneurial mindset.
+        Curriculum included e.g., design thinking, stakeholder analysis, user interviews, branding, entrepreneurial mindset.
         <a href="https://fulphil.teachable.com/p/social-entrepreneurship">Curriculum</a>. <a href="https://issuu.com/tiffany.yau/docs/12_10_impact_report_design_draft__2_">Impact report</a>.</p>
 
         <h2>Other Data Projects</h2>
@@ -108,9 +109,8 @@
         of the social media mental health community: an exploration of mental health subreddits and a comparison with caption content of Instagram mental health influencers.</p>
 
         <p><b>Understanding and Predicting Reported Mental Health</b><br>
-        A <a href="https://github.com/emoneil/final-project/blob/main/report/final-project-report-copy.pdf">report</a>
-        on predicting reported days that one's mental health was not good (BRFSS CDC data) in the past month based on social and economic variables, 
-        measures of the receival of clinical care, health factors, and the availability of mental health facilities offering resources by state (N-MHSS data).</p>
+        A <a href="https://github.com/emoneil/reported-mental-health-project/blob/main/report/final-project-report-copy.pdf">report</a>
+        on predicting days one's mental health was not good in past month (BRFSS CDC) with socioeconomic variables, receival of clinical care, health factors, and mental health facilities offering resources by state (N-MHSS).</p>
 
         <p><b>Female Founders in Tech</b><br>
         A <a href="https://oneilemma.medium.com/the-underrepresentation-of-female-founders-in-tech-and-the-difference-in-employee-morale-f8da2b908738?source=friends_link&sk=2f1c9ac8c5eefa7e1eac2fd097b08122">data exploration</a> 
