--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
           In Summer 2022, I conducted language analysis relating user reviews and expert ratings of mental health apps at University of Washington through the <a href="https://dub.washington.edu/">Design, Use, Build</a> alliance.</p>
         
         <p>I have spent time at non-profits, startups, and mid-size companies. I focused on search and selection of entrepreneurs at <a href="https://endeavor.org/">Endeavor</a>,
-          building a curriculum to for empowering the next generation of socially impactful entrepreneurs at <a
+          building a curriculum to empower the next generation of socially impactful entrepreneurs at <a
           href="https://fulphil.org/">Fulphil</a>, and underscoring customer value in enterprise software at <a href="https://www.servicenow.com/">ServiceNow</a>.</p>
 
         <p>Other things I think a lot about are societal impacts of technology and fostering an inclusive CS community. 
           I am passionate about telling stories with data and care a lot about mental health advocacy. 
-          I have volunteered at crisis hotlines since 2016 and am currently a Crisis Counselor at <a href="https://www.crisistextline.org/">Crisis Textline</a>.
+          I have volunteered at crisis hotlines since 2016, formerly at Teen Line and currently as a Crisis Counselor at <a href="https://www.crisistextline.org/">Crisis Textline</a>.
           My mission is to advance mental health empowerment and support through technology.</p>
 
         <p>View my coursework <a href="https://airtable.com/shrD95EC5EwYTAbmW">here</a>.</p>
