--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <p>Other things I think a lot about are societal impacts of technology and fostering an inclusive CS community. 
           I am passionate about telling stories with data and care a lot about mental health advocacy. 
-          I have volunteered at crisis hotlines since 2016, formerly at Teen Line and currently as a Crisis Counselor at <a href="https://www.crisistextline.org/">Crisis Textline</a>.
+          I have volunteered at crisis hotlines since 2016, formerly at <a href="https://www.teenline.org/">Teen Line</a> and currently as a Crisis Counselor at <a href="https://www.crisistextline.org/">Crisis Textline</a>.
           My mission is to advance mental health empowerment and support through technology.</p>
 
         <p>View my coursework <a href="https://airtable.com/shrD95EC5EwYTAbmW">here</a>.</p>
@@ -62,7 +62,7 @@
         </p>
 
         <p><b>Honors Thesis in Cognitive Science | Aug. 2021 - May 2022</b><br>
-        Applied natural language generation to aid peer counselors in generating messages employing reflection. Primarily advised by Prof. Lyle Ungar.</p>
+        Applied natural language generation to aid peer counselors in generating messages employing reflection. Gathered support and resources at universities including CMU and Georgia Tech. Primarily advised by Prof. Lyle Ungar.</p>
 
         <p><b>CMU Human-Computer Interaction Institute Research | Aug. 2021 - July 2022</b><br>
         Researched and wrote on design rationale of training platform for nurses learning motivational interviewing including
