--- a/index.html
+++ b/index.html
@@ -30,80 +30,79 @@
         <img src="./images/profile-pic.jpg" style="width:200px;height:200px;"/><br>
         <img src="./images/linkedin.png" alt="Linkedin" style="width:15px;height:15px;padding-right:10px;"><a href="https://www.linkedin.com/in/emma-oneil/">LinkedIn</a><br>
         <!-- <img src="./images/resume.png" alt="PDF Resume" style="width:15px;height:15px;padding-right:10px;"><a href="https://drive.google.com/file/d/1SZxePFS0vFrcHsTaRCysxvi8lB3r5OS1/view?usp=sharing">PDF Resume</a> -->
+        <img src="./images/coursework.png" alt="Coursework" style="width:15px;height:15px;padding-right:10px;"><a href="https://airtable.com/shrD95EC5EwYTAbmW">Coursework</a>
       </header>
       <section>
-        <p>I'm a December 2022 dual-degree graduate from <a href="https://www.wharton.upenn.edu/">The Wharton School</a> and the
-          <a href="https://www.upenn.edu/">University of Pennsylvania</a>, where I majored in Statistics, Cognitive Science, and Computer Science and minored in Mathematics.</p>
+        <p>I'm a Software Engineering Intern at <a href="https://www.vanna.health/">Vanna Health</a>, an early-stage venture reimagining healthcare for people living with serious mental illness (SMI). I graduated in December 2022 with a dual degree from <a href="https://www.wharton.upenn.edu/">The Wharton School</a> and the
+          <a href="https://www.upenn.edu/">University of Pennsylvania</a>, where I majored in Statistics, Cognitive Science, and Computer Science and minored in Mathematics.
 
-        <p>My interests exist at the intersection of research, technology, entrepreneurship, and social impact. 
+        <p>My interests are at the intersection of research, technology, entrepreneurship, and social impact. 
           My research experience lies within human-computer interaction, machine learning, natural language processing, and computational social science. I am especially excited by research 
           exploring the use of innovative technology to improve the lives of those living with mental health challenges and their communities.
           My honors thesis involved the use of natural language generation with the goal of aiding peer counselors in generating messages employing the clinical skill of reflection.  
           In Summer 2021, I conducted research at <a href="https://www.hcii.cmu.edu/">Carnegie Mellon's Human-Computer Interaction Institute</a>, developing a platform for training nurses to conduct 
           motivational interviewing. In the following academic year, I continued research on the project, framing the evidence-based design rationale for the developed prototype. 
-          In Summer 2022, I conducted language analysis relating user reviews and expert ratings of mental health apps at University of Washington through the <a href="https://dub.washington.edu/">Design, Use, Build</a> alliance.</p>
+          In Summer 2022, I conducted language analysis relating user reviews and expert ratings of mental health apps at <a href="https://dub.washington.edu/">University of Washington</a>.
         
         <p>I have spent time at non-profits, startups, and mid-size companies. I focused on search and selection of entrepreneurs at <a href="https://endeavor.org/">Endeavor</a>,
           building a curriculum to empower the next generation of socially impactful entrepreneurs at <a
-          href="https://fulphil.org/">Fulphil</a>, and underscoring customer value in enterprise software at <a href="https://www.servicenow.com/">ServiceNow</a>.</p>
+          href="https://fulphil.org/">Fulphil</a>, and underscoring customer value in enterprise software at <a href="https://www.servicenow.com/">ServiceNow</a>.</p></p>
 
         <p>Other things I think a lot about are societal impacts of technology and fostering an inclusive CS community. 
-          I am passionate about telling stories with data and care a lot about mental health advocacy. 
-          I have volunteered at crisis hotlines since 2016, formerly at <a href="https://www.teenline.org/">Teen Line</a> and currently as a Crisis Counselor at <a href="https://www.crisistextline.org/">Crisis Textline</a>.
+          I am passionate about mental health advocacy and telling stories with data. 
+          I have volunteered as a crisis counselor at hotlines since 2016, formerly at <a href="https://www.teenline.org/">Teen Line</a> and currently at <a href="https://www.crisistextline.org/">Crisis Text Line</a>.
           My mission is to advance mental health empowerment and support through technology.</p>
-
-        <p>View my coursework <a href="https://airtable.com/shrD95EC5EwYTAbmW">here</a>.</p>
 
         <h2>Research</h2>
 
-        <p><b>UW Design, Use, Build Alliance REU Fellow | June 2022 - Aug. 2022</b><br>
-          Related language of user reviews of mental health apps to expert ratings of credibility and user experience by  <a href="https://onemindpsyberguide.org/">One Mind PsyberGuide</a>. Advised by Profs. Gary Hsieh and Tanu Mitra.
-          <a href="https://drive.google.com/file/d/1UTkPYxacM4jdmFDegQs642QW6Jlmwi3B/view?usp=sharing">Poster</a>.
+        <p><b>UW Design, Use, Build Alliance REU | June 2022 - Aug. 2022</b><br>
+          Related language of user reviews of mental health apps to expert ratings by  <a href="https://onemindpsyberguide.org/">One Mind PsyberGuide</a>. Advised by Profs. Gary Hsieh and Tanu Mitra.
+          <!-- <a href="https://drive.google.com/file/d/1UTkPYxacM4jdmFDegQs642QW6Jlmwi3B/view?usp=sharing">Poster</a>. -->
         </p>
 
         <p><b>Honors Thesis in Cognitive Science | Aug. 2021 - May 2022</b><br>
         Applied natural language generation to aid peer counselors in generating messages employing reflection. Gathered support and resources at universities including CMU and Georgia Tech. Primarily advised by Prof. Lyle Ungar.</p>
 
-        <p><b>CMU Human-Computer Interaction Institute Research | Aug. 2021 - July 2022</b><br>
-        Researched and wrote on design rationale of training platform for nurses learning motivational interviewing including
-        the application of role-playing, peer feedback, and reflection. Worked with PhD student Tianying Chen.</p>
+        <p><b>CMU Human-Computer Interaction Institute REU | June 2021 - July 2022</b><br>
+        Developed <a href="https://pinmi-summer.netlify.app/">prototype</a> to train nurses learning motivational interviewing and iterated on design through user testing.
+        Researched and wrote on design rationale of training platform including the application of role-playing, peer feedback, and reflection.
+        Advised by Profs. Laura Dabbish and Robert Kraut.
+        <!-- <a href="https://drive.google.com/file/d/1huKhBgcuVSJAw5O4io6QdvJZJvOm1PeU/view?usp=sharing">Poster</a>. -->
+        </p>
 
-        <p><b>CMU Human-Computer Interaction Institute REU Fellow | June - Aug. 2021</b><br>
-        Developed <a href="https://pinmi-summer.netlify.app/">prototype</a> for platform to train nurses learning motivational interviewing. 
-        Iterated on design through user testing with nurses at <a href="https://www.highmarkhealth.org/hmk/index.shtml">Highmark Health</a>. Advised by Profs. Laura Dabbish and Robert Kraut.
-        <a href="https://drive.google.com/file/d/1huKhBgcuVSJAw5O4io6QdvJZJvOm1PeU/view?usp=sharing">Poster</a>.</p>
-
-        <p><b>MindCORE Lila R. Gleitman Fellow | June 2019 - Aug. 2019</b><br>
+        <p><b>MindCORE Lila R. Gleitman Fellowship | June 2019 - Aug. 2019</b><br>
         Piloted study examining whether people find it more difficult to make predictions for people who think differently from them. 
         Presented 15-minute talk at research symposium. Advised by Prof. John McCoy. 
         <a href="https://docs.google.com/presentation/d/1lJBOgjke5geZbdwsBAH24VCbugxAgrdg/edit?usp=sharing&ouid=104991045083918685632&rtpof=true&sd=true">Slides</a>.</p>
 
-        <p><b>USC Brain and Creativity Institute Research | June 2016 - June 2018</b><br>
+        <p><b>USC Brain and Creativity Institute | June 2016 - June 2018</b><br>
         Conducted literature review of the effects of musical training on early reading development. Advised by Prof. Assal Habibi.</p>
-
-        <h2>Other Work and Internships</h2>
-        <p><b>Penn Engineering: CIS 7000 Teaching Assistant | Jan. 2023 -</b><br>
-          TA for Algorithmic Justice graduate level seminar at Penn taught by Prof. Danaë Metaxa.</p>
-
-        <p><b>Penn Engineering: CIS 3990 Teaching Assistant | Aug. 2022 - Dec. 2022</b><br>
-          TA for first-ever Human-Computer Interaction undergraduate offering at Penn taught by Prof. Danaë Metaxa. 
-          Held office hours, graded assignments, designed rubrics, and guided and graded a subset of team semester projects.</p>
   
+        <h2>For-profits and Non-profits </h2>
+        <p><b>Vanna Health: Software Engineering Intern | Feb. 2023 - Present</b><br>
+          Building Vanna's member relationship management system as front-end engineer to support Vanna Coaches who work with members to develop personalized recovery programs for people with Serious Mental Illness.</p>
+
         <p><b>Endeavor: Entrepreneurship Selection & Growth | Dec. 2020 - May 2021</b><br>
         Wrote business profiles to inform evaluation in International Selection Panels. Pioneered project for targeting socially diverse entrepreneurs, 
         researching and presenting female and minority-founded tech companies.</p>
 
         <p><b>ServiceNow: Value Management | May 2020 - Aug. 2020</b><br>
-        Created executive summaries for 15+ customers across industries. Pioneered database of insights from 
-        customer-led presentations from the <a href="https://knowledge.servicenow.com/">Knowledge 2020 digital conference</a>. 
-        Created product demos for the Value Management Platform.</p>
+        Created executive summaries for 15 customers across industries. Pioneered database of insights from 
+        <a href="https://knowledge.servicenow.com/">Knowledge 2020 conference</a> customer presentations.</p>
 
         <p><b>Fulphil: Project Management | Aug. 2019 - June 2020</b><br>
-        Created social entrepreneurship curriculum for schools nationwide and explored competitive offerings. 
-        Curriculum included e.g., design thinking, stakeholder analysis, user interviews, branding, entrepreneurial mindset.
+        Created social entrepreneurship curriculum for distribution in schools nationwide.
         <a href="https://fulphil.teachable.com/p/social-entrepreneurship">Curriculum</a>. <a href="https://issuu.com/tiffany.yau/docs/12_10_impact_report_design_draft__2_">Impact report</a>.</p>
 
-        <h2>Other Data Projects</h2>
+        <h2>Teaching</h2>
+        <p><b>Penn Engineering: CIS 7000 Teaching Assistant | Jan. 2023 - Present</b><br>
+          TA for Algorithmic Justice graduate-level seminar at Penn taught by Prof. Danaë Metaxa. Developing course website for Penn's HCI undergraduate offering.</p>
+
+        <p><b>Penn Engineering: CIS 3990 Teaching Assistant | Aug. 2022 - Dec. 2022</b><br>
+          TA for first Human-Computer Interaction undergraduate offering at Penn taught by Prof. Danaë Metaxa. 
+          Held office hours, graded assignments, designed rubrics, and guided and graded a subset of team semester projects.</p>
+        
+        <h2>Data Projects</h2>
         <p><b>Mental Health Support on Reddit</b><br>
         A <a href="https://oneilemma.medium.com/mental-health-support-on-reddit-64e5f3d38923?source=friends_link&sk=undefined">text analysis</a> 
         of the social media mental health community: an exploration of mental health subreddits and a comparison with caption content of Instagram mental health influencers.</p>
