--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         Conducted literature review of the effects of musical training on early reading development. Advised by Prof. Assal Habibi.</p>
   
         <h2>For-profits and Non-profits </h2>
-        <p><b>Vanna Health: Software Engineering Intern | Feb. 2023 - Present</b><br>
+        <p><b>Vanna Health: Software Engineering | Feb. 2023 - Present</b><br>
           Building Vanna's member relationship management system as front-end engineer to support Vanna Coaches who work with members to develop personalized recovery programs for people with Serious Mental Illness.</p>
 
         <p><b>Endeavor: Entrepreneurship Selection & Growth | Dec. 2020 - May 2021</b><br>
@@ -96,7 +96,7 @@
 
         <h2>Teaching</h2>
         <p><b>Penn Engineering: CIS 7000 Teaching Assistant | Jan. 2023 - Present</b><br>
-          TA for Algorithmic Justice graduate-level seminar at Penn taught by Prof. Danaë Metaxa. Developing course website for Penn's HCI undergraduate offering.</p>
+          TA for Algorithmic Justice graduate-level seminar at Penn taught by Prof. Danaë Metaxa. Developed <a href="https://emoneil.github.io/cis3990/">course website</a> for Penn's HCI undergraduate offering with feedback from Prof. Andrew Head.</p>
 
         <p><b>Penn Engineering: CIS 3990 Teaching Assistant | Aug. 2022 - Dec. 2022</b><br>
           TA for first Human-Computer Interaction undergraduate offering at Penn taught by Prof. Danaë Metaxa. 
