--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <p>Other things I think a lot about are societal impacts of technology and fostering an inclusive CS community. 
           I am passionate about mental health advocacy and telling stories with data. 
           I have volunteered as a crisis counselor at hotlines since 2016, formerly at <a href="https://www.teenline.org/">Teen Line</a> and currently at <a href="https://www.crisistextline.org/">Crisis Text Line</a>.
-          My mission is to advance mental health empowerment and support through technology.</p>
+          My mission is to advance mental health empowerment and support.</p>
 
         <h2>Research</h2>
 
@@ -65,8 +65,8 @@
 
         <p><b>CMU Human-Computer Interaction Institute REU | June 2021 - July 2022</b><br>
         Developed <a href="https://pinmi-summer.netlify.app/">prototype</a> to train nurses learning motivational interviewing and iterated on design through user testing.
-        Researched and wrote on design rationale of training platform including the application of role-playing, peer feedback, and reflection.
-        Advised by Profs. Laura Dabbish and Robert Kraut.
+        Researched and wrote on design rationale, e.g., application of role-playing, peer feedback, and reflection.
+        Advised by Profs. Laura Dabbish and Robert Kraut. Paper accepted to CHI '23.
         <!-- <a href="https://drive.google.com/file/d/1huKhBgcuVSJAw5O4io6QdvJZJvOm1PeU/view?usp=sharing">Poster</a>. -->
         </p>
 
