--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </p>
 
         <p><b>Honors Thesis in Cognitive Science | Aug. 2021 - May 2022</b><br>
-        Applied natural language generation to aid peer counselors in generating messages employing reflection. Gathered support and resources at universities including CMU and Georgia Tech. Primarily advised by Prof. Lyle Ungar.</p>
+        Applied natural language generation to aid peer counselors in generating messages employing reflection. Gathered cross-institutional support and resources from CMU and Stanford faculty. Primarily advised by Prof. Lyle Ungar.</p>
 
         <p><b>CMU Human-Computer Interaction Institute REU | June 2021 - July 2022</b><br>
         Developed <a href="https://pinmi-summer.netlify.app/">prototype</a> to train nurses learning motivational interviewing and iterated on design through user testing.
@@ -80,7 +80,7 @@
   
         <h2>For-profits and Non-profits </h2>
         <p><b>Vanna Health: Software Engineering | Feb. 2023 - Present</b><br>
-          Building Vanna's member relationship management system as front-end engineer to support Vanna Coaches who work with members to develop personalized recovery programs for people with Serious Mental Illness.</p>
+          Building Vanna's member relationship management system to support Vanna Coaches who work with members to develop personalized recovery programs for people with Serious Mental Illness.</p>
 
         <p><b>Endeavor: Entrepreneurship Selection & Growth | Dec. 2020 - May 2021</b><br>
         Wrote business profiles to inform evaluation in International Selection Panels. Pioneered project for targeting socially diverse entrepreneurs, 
