update link to paper

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <p><b>CMU Human-Computer Interaction Institute REU | June 2021 - July 2022</b><br>
         Developed <a href="https://pinmi-summer.netlify.app/">prototype</a> to train nurses learning motivational interviewing and iterated on design through user testing.
         Researched and wrote on design rationale, e.g., application of role-playing, peer feedback, and reflection.
-        Advised by Profs. Laura Dabbish and Robert Kraut. Paper accepted to CHI '23.
+        Advised by Profs. Laura Dabbish and Robert Kraut.<a href="https://dl.acm.org/doi/10.1145/3544548.3581551">CHI '23 paper</a>.
         <!-- <a href="https://drive.google.com/file/d/1huKhBgcuVSJAw5O4io6QdvJZJvOm1PeU/view?usp=sharing">Poster</a>. -->
         </p>
 
