--- a/index.html
+++ b/index.html
@@ -36,21 +36,21 @@
         <p>I'm a Software Engineering Intern at <a href="https://www.vanna.health/">Vanna Health</a>, an early-stage venture reimagining healthcare for people living with serious mental illness (SMI). I graduated in December 2022 with a dual degree from <a href="https://www.wharton.upenn.edu/">The Wharton School</a> and the
           <a href="https://www.upenn.edu/">University of Pennsylvania</a>, where I majored in Statistics, Cognitive Science, and Computer Science and minored in Mathematics.
 
-        <p>My interests are at the intersection of research, technology, entrepreneurship, and social impact. 
+        <p>I have broad interests at the intersection of research, technology, entrepreneurship, and social impact, and I am particularly passionate about mental health research, policy, and technology. 
           My research experience lies within human-computer interaction, machine learning, natural language processing, and computational social science. I am especially excited by research 
-          exploring the use of innovative technology to improve the lives of those living with mental health challenges and their communities.
+          exploring technology to improve the lives of those living with mental health challenges and their communities.
           My honors thesis involved the use of natural language generation with the goal of aiding peer counselors in generating messages employing the clinical skill of reflection.  
           In Summer 2021, I conducted research at <a href="https://www.hcii.cmu.edu/">Carnegie Mellon's Human-Computer Interaction Institute</a>, developing a platform for training nurses to conduct 
           motivational interviewing. In the following academic year, I continued research on the project, framing the evidence-based design rationale for the developed prototype. 
           In Summer 2022, I conducted language analysis relating user reviews and expert ratings of mental health apps at <a href="https://dub.washington.edu/">University of Washington</a>.
         
         <p>I have spent time at non-profits, startups, and mid-size companies. I focused on search and selection of entrepreneurs at <a href="https://endeavor.org/">Endeavor</a>,
-          building a curriculum to empower the next generation of socially impactful entrepreneurs at <a
-          href="https://fulphil.org/">Fulphil</a>, and underscoring customer value in enterprise software at <a href="https://www.servicenow.com/">ServiceNow</a>.</p></p>
+          building a curriculum to empower the next generation of social entrepreneurs at <a
+          href="https://fulphil.org/">Fulphil</a>, and underscoring customer value in enterprise software at <a href="https://www.servicenow.com/">ServiceNow</a>. 
+          Most recently, I have worked on building the member relationship management system MVP for <a href="https://www.vanna.health/">Vanna Health</a>, 
+          a company focused on providing psychosocial rehabilation at scale to improve outcomes and reduce healthcare costs.</p></p>
 
-        <p>Other things I think a lot about are societal impacts of technology and fostering an inclusive CS community. 
-          I am passionate about mental health advocacy and telling stories with data. 
-          I have volunteered as a crisis counselor at hotlines since 2016, formerly at <a href="https://www.teenline.org/">Teen Line</a> and currently at <a href="https://www.crisistextline.org/">Crisis Text Line</a>.
+        <p>Over the years, I have volunteered as a crisis counselor at hotlines, formerly at <a href="https://www.teenline.org/">Teen Line</a> and currently at <a href="https://www.crisistextline.org/">Crisis Text Line</a>.
           My mission is to advance mental health empowerment and support.</p>
 
         <h2>Research</h2>
@@ -95,7 +95,7 @@
         <a href="https://fulphil.teachable.com/p/social-entrepreneurship">Curriculum</a>. <a href="https://issuu.com/tiffany.yau/docs/12_10_impact_report_design_draft__2_">Impact report</a>.</p>
 
         <h2>Teaching</h2>
-        <p><b>Penn Engineering: CIS 7000 Teaching Assistant | Jan. 2023 - Present</b><br>
+        <p><b>Penn Engineering: CIS 7000 Teaching Assistant | Jan. 2023 - May 2023</b><br>
           TA for Algorithmic Justice graduate-level seminar at Penn taught by Prof. Danaë Metaxa. Developed <a href="https://emoneil.github.io/cis3990/">course website</a> for Penn's HCI undergraduate offering with feedback from Prof. Andrew Head.</p>
 
         <p><b>Penn Engineering: CIS 3990 Teaching Assistant | Aug. 2022 - Dec. 2022</b><br>
