Made updates (ed)

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <img src="./images/coursework.png" alt="Coursework" style="width:15px;height:15px;padding-right:10px;"><a href="https://airtable.com/shrD95EC5EwYTAbmW">Coursework</a>
       </header>
       <section>
-        <p>I'm a Software Engineering Intern at <a href="https://www.vanna.health/">Vanna Health</a>, an early-stage venture reimagining healthcare for people living with serious mental illness (SMI). I graduated in December 2022 with a dual degree from <a href="https://www.wharton.upenn.edu/">The Wharton School</a> and the
+        <p>I am currently completing pre-med postbaccalaureate courses at Harvard. I graduated in December 2022 with a dual degree from <a href="https://www.wharton.upenn.edu/">The Wharton School</a> and the
           <a href="https://www.upenn.edu/">University of Pennsylvania</a>, where I majored in Statistics, Cognitive Science, and Computer Science and minored in Mathematics.
 
         <p>I have broad interests at the intersection of research, technology, entrepreneurship, and social impact, and I am particularly passionate about mental health research, policy, and technology. 
@@ -47,7 +47,7 @@
         <p>I have spent time at non-profits, startups, and mid-size companies. I focused on search and selection of entrepreneurs at <a href="https://endeavor.org/">Endeavor</a>,
           building a curriculum to empower the next generation of social entrepreneurs at <a
           href="https://fulphil.org/">Fulphil</a>, and underscoring customer value in enterprise software at <a href="https://www.servicenow.com/">ServiceNow</a>. 
-          Most recently, I have worked on building the member relationship management system MVP for <a href="https://www.vanna.health/">Vanna Health</a>, 
+          Most recently, I worked on building the member relationship management system MVP for <a href="https://www.vanna.health/">Vanna Health</a>, 
           a company focused on providing psychosocial rehabilation at scale to improve outcomes and reduce healthcare costs.</p></p>
 
         <p>Over the years, I have volunteered as a crisis counselor at hotlines, formerly at <a href="https://www.teenline.org/">Teen Line</a> and currently at <a href="https://www.crisistextline.org/">Crisis Text Line</a>.
@@ -79,8 +79,8 @@
         Conducted literature review of the effects of musical training on early reading development. Advised by Prof. Assal Habibi.</p>
   
         <h2>For-profits and Non-profits </h2>
-        <p><b>Vanna Health: Software Engineering | Feb. 2023 - Present</b><br>
-          Building Vanna's member relationship management system to support Vanna Coaches who work with members to develop personalized recovery programs for people with Serious Mental Illness.</p>
+        <p><b>Vanna Health: Software Engineering | Feb. 2023 - June 2023</b><br>
+        Worked as front-end engineer to build Vanna's member relationship management system to support Vanna Coaches who work with members to develop personalized recovery programs for people with Serious Mental Illness.</p>
 
         <p><b>Endeavor: Entrepreneurship Selection & Growth | Dec. 2020 - May 2021</b><br>
         Wrote business profiles to inform evaluation in International Selection Panels. Pioneered project for targeting socially diverse entrepreneurs, 
