--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
           My mission is to advance mental health empowerment and support.</p>
 
         <h2>Research</h2>
+        <p><b>Mass General Cancer Center | Dec 2023 - Present</b><br>
+          Working with team from the Collaborative Care and Community Engagement Program aiming to prevent premature cancer mortality and improve the quality of life of individuals affected by mental illness and cancer.
+        </p>
 
         <p><b>UW Design, Use, Build Alliance REU | June 2022 - Aug. 2022</b><br>
           Related language of user reviews of mental health apps to expert ratings by  <a href="https://onemindpsyberguide.org/">One Mind PsyberGuide</a>. Advised by Profs. Gary Hsieh and Tanu Mitra.
@@ -61,12 +64,13 @@
         </p>
 
         <p><b>Honors Thesis in Cognitive Science | Aug. 2021 - May 2022</b><br>
-        Applied natural language generation to aid peer counselors in generating messages employing reflection. Gathered cross-institutional support and resources from CMU and Stanford faculty. Primarily advised by Prof. Lyle Ungar.</p>
+        Applied natural language generation to aid peer counselors in generating messages employing reflection. Gathered cross-institutional support and resources from CMU and Stanford faculty. Primarily advised by Prof. Lyle Ungar. 
+        Paper presented at EMNLP 2023 Generation, Evaluation & Metrics Workshop.</p>
 
         <p><b>CMU Human-Computer Interaction Institute REU | June 2021 - July 2022</b><br>
         Developed <a href="https://pinmi-summer.netlify.app/">prototype</a> to train nurses learning motivational interviewing and iterated on design through user testing.
         Researched and wrote on design rationale, e.g., application of role-playing, peer feedback, and reflection.
-        Advised by Profs. Laura Dabbish and Robert Kraut. <a href="https://dl.acm.org/doi/10.1145/3544548.3581551">CHI '23 paper</a>.
+        Advised by Profs. Laura Dabbish and Robert Kraut. <a href="https://dl.acm.org/doi/10.1145/3544548.3581551">CHI 2023 paper</a>.
         <!-- <a href="https://drive.google.com/file/d/1huKhBgcuVSJAw5O4io6QdvJZJvOm1PeU/view?usp=sharing">Poster</a>. -->
         </p>
 
@@ -80,7 +84,7 @@
   
         <h2>For-profits and Non-profits </h2>
         <p><b>Vanna Health: Software Engineering | Feb. 2023 - June 2023</b><br>
-        Worked as front-end engineer to build Vanna's member relationship management system to support Vanna Coaches who work with members to develop personalized recovery programs for people with Serious Mental Illness.</p>
+        Worked as front-end engineer to build Vanna's member relationship management system to support Vanna Coaches who work with members to develop personalized recovery programs for people with serious mental illness.</p>
 
         <p><b>Endeavor: Entrepreneurship Selection & Growth | Dec. 2020 - May 2021</b><br>
         Wrote business profiles to inform evaluation in International Selection Panels. Pioneered project for targeting socially diverse entrepreneurs, 
@@ -96,7 +100,7 @@
 
         <h2>Teaching</h2>
         <p><b>Penn Engineering: CIS 7000 Teaching Assistant | Jan. 2023 - May 2023</b><br>
-          TA for Algorithmic Justice graduate-level seminar at Penn taught by Prof. Danaë Metaxa. Developed <a href="https://emoneil.github.io/cis3990/">course website</a> for Penn's HCI undergraduate offering with feedback from Prof. Andrew Head.</p>
+          TA for Algorithmic Justice graduate-level seminar at Penn taught by Prof. Danaë Metaxa. Developed <a href="http://cis4120.seas.upenn.edu/">course website</a> for Penn's HCI undergraduate offering with feedback from Prof. Andrew Head.</p>
 
         <p><b>Penn Engineering: CIS 3990 Teaching Assistant | Aug. 2022 - Dec. 2022</b><br>
           TA for first Human-Computer Interaction undergraduate offering at Penn taught by Prof. Danaë Metaxa. 
@@ -120,7 +124,7 @@
 
         <h2>Creative</h2>
         <p><b>Music</b><br>
-        Studying violin for 16 years. Write, perform, and produce music. 
+        Studying violin for 17 years. Write, perform, and produce music. 
         Recognized as a semifinalist in February 2019 in the 
         <a href="https://songwritingcompetition.com/">International Songwriting Competition</a>.
         <a href="https://soundcloud.com/emma_oneil">SoundCloud</a>.</p>
