--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
         </p>
 
         <p><b>Honors Thesis in Cognitive Science | Aug. 2021 - May 2022</b><br>
-        Applied natural language generation to aid peer counselors in generating messages employing reflection. Gathered cross-institutional support and resources from CMU and Stanford faculty. Primarily advised by Prof. Lyle Ungar. 
-        Paper presented at EMNLP 2023 Generation, Evaluation & Metrics Workshop. <a href="https://aclanthology.org/2023.gem-1.6/">EMNLP 2023 paper</a></p>
+        Applied natural language generation to aid peer counselors in generating messages employing reflection. Gathered cross-institutional support and resources from CMU and Stanford faculty. Primarily advised by Prof. Lyle Ungar.
+        <a href="https://aclanthology.org/2023.gem-1.6/">EMNLP 2023 paper</a>.
+        </p>
 
         <p><b>CMU Human-Computer Interaction Institute REU | June 2021 - July 2022</b><br>
         Developed <a href="https://pinmi-summer.netlify.app/">prototype</a> to train nurses learning motivational interviewing and iterated on design through user testing.
