--- a/index.html
+++ b/index.html
@@ -33,33 +33,30 @@
         <img src="./images/coursework.png" alt="Coursework" style="width:15px;height:15px;padding-right:10px;"><a href="https://airtable.com/shrD95EC5EwYTAbmW">Coursework</a>
       </header>
       <section>
-        <p>I am currently completing pre-med postbaccalaureate courses at Harvard. I graduated in December 2022 with a dual degree from <a href="https://www.wharton.upenn.edu/">The Wharton School</a> and the
-          <a href="https://www.upenn.edu/">University of Pennsylvania</a>, where I majored in Statistics, Cognitive Science, and Computer Science and minored in Mathematics.
+        <p>I currently conduct research on collaborative care for people with serious mental illness and cancer at Massachusetts General Hospital. In June, I will be starting as a Clinical Research Coordinator in the <a href="https://www.massgeneral.org/cancer-center/clinical-trials-and-research/cancer-outcomes-research">Cancer Outcomes Research and Education Program</a>. I graduated in December 2022 with a dual degree from <a href="https://www.wharton.upenn.edu/">The Wharton School</a> and
+          <a href="https://www.upenn.edu/">University of Pennsylvania</a>, where I majored in Statistics, Cognitive Science, and Computer Science and minored in Mathematics. This past year, I completed pre-medical postbaccalaureate coursework at Harvard. 
 
-        <p>I have broad interests at the intersection of research, technology, entrepreneurship, and social impact, and I am particularly passionate about mental health research, policy, and technology. 
-          My research experience lies within human-computer interaction, machine learning, natural language processing, and computational social science. I am especially excited by research 
-          exploring technology to improve the lives of those living with mental health challenges and their communities.
+        <p>I am particularly passionate about mental health research, policy, and technology as well as questions in precision medicine, machine-in-the-loop systems in healthcare, psychiatry, integrated care, physician-patient interaction, and health equity. 
+          My research experience lies within health services, human-computer interaction, machine learning, natural language processing, and computational social science.
           My honors thesis involved the use of natural language generation with the goal of aiding peer counselors in generating messages employing the clinical skill of reflection.  
-          In Summer 2021, I conducted research at <a href="https://www.hcii.cmu.edu/">Carnegie Mellon's Human-Computer Interaction Institute</a>, developing a platform for training nurses to conduct 
-          motivational interviewing. In the following academic year, I continued research on the project, framing the evidence-based design rationale for the developed prototype. 
-          In Summer 2022, I conducted language analysis relating user reviews and expert ratings of mental health apps at <a href="https://dub.washington.edu/">University of Washington</a>.
-        
-        <p>I have spent time at non-profits, startups, and mid-size companies. I focused on search and selection of entrepreneurs at <a href="https://endeavor.org/">Endeavor</a>,
+          In 2021, I conducted research at <a href="https://www.hcii.cmu.edu/">Carnegie Mellon's Human-Computer Interaction Institute</a>, developing a platform for training nurses to conduct 
+          motivational interviewing and framing the evidence-based design of the prototype.
+
+        <p>I have spent time at non-profits, startups, and a software company. Most recently, I worked on building the member relationship management system MVP for <a href="https://www.vanna.health/">Vanna Health</a>, 
+          a company focused on providing psychosocial rehabilation at scale to improve outcomes and reduce healthcare costs. During my time at Penn, I focused on search and selection of entrepreneurs at <a href="https://endeavor.org/">Endeavor</a>,
           building a curriculum to empower the next generation of social entrepreneurs at <a
-          href="https://fulphil.org/">Fulphil</a>, and underscoring customer value in enterprise software at <a href="https://www.servicenow.com/">ServiceNow</a>. 
-          Most recently, I worked on building the member relationship management system MVP for <a href="https://www.vanna.health/">Vanna Health</a>, 
-          a company focused on providing psychosocial rehabilation at scale to improve outcomes and reduce healthcare costs.</p></p>
+          href="https://fulphil.org/">Fulphil</a>, and underscoring customer value in enterprise software at <a href="https://www.servicenow.com/">ServiceNow</a>.</p>
 
         <p>Over the years, I have volunteered as a crisis counselor at hotlines, formerly at <a href="https://www.teenline.org/">Teen Line</a> and currently at <a href="https://www.crisistextline.org/">Crisis Text Line</a>.
           My mission is to advance mental health empowerment and support.</p>
 
         <h2>Research</h2>
-        <p><b>Mass General Cancer Center | Dec 2023 - Present</b><br>
-          Working with team from the Collaborative Care and Community Engagement Program aiming to prevent premature cancer mortality and improve the quality of life of individuals affected by mental illness and cancer.
+        <p><b>Mass General Cancer Center | Dec. 2023 - Present</b><br>
+          Work with Dr. Kelly Irwin on clinical research program aiming to prevent premature cancer mortality and improve the quality of life of individuals affected by mental illness and cancer.
         </p>
 
         <p><b>UW Design, Use, Build Alliance REU | June 2022 - Aug. 2022</b><br>
-          Related language of user reviews of mental health apps to expert ratings by  <a href="https://onemindpsyberguide.org/">One Mind PsyberGuide</a>. Advised by Profs. Gary Hsieh and Tanu Mitra.
+          Conducted language analysis relating user reviews of mental health apps to expert ratings by <a href="https://onemindpsyberguide.org/">One Mind PsyberGuide</a>. Advised by Profs. Gary Hsieh and Tanu Mitra.
           <!-- <a href="https://drive.google.com/file/d/1UTkPYxacM4jdmFDegQs642QW6Jlmwi3B/view?usp=sharing">Poster</a>. -->
         </p>
 
@@ -88,7 +85,7 @@
         Worked as front-end engineer to build Vanna's member relationship management system to support Vanna Coaches who work with members to develop personalized recovery programs for people with serious mental illness.</p>
 
         <p><b>Endeavor: Entrepreneurship Selection & Growth | Dec. 2020 - May 2021</b><br>
-        Wrote business profiles to inform evaluation in International Selection Panels. Pioneered project for targeting socially diverse entrepreneurs, 
+        Wrote business profiles to inform evaluation in International Selection Panels. Spearheaded project for targeting socially diverse entrepreneurs, 
         researching and presenting female and minority-founded tech companies.</p>
 
         <p><b>ServiceNow: Value Management | May 2020 - Aug. 2020</b><br>
@@ -125,7 +122,7 @@
 
         <h2>Creative</h2>
         <p><b>Music</b><br>
-        Studying violin for 17 years. Write, perform, and produce music. 
+        Studying violin for 18 years. Write, perform, and produce music. 
         Recognized as a semifinalist in February 2019 in the 
         <a href="https://songwritingcompetition.com/">International Songwriting Competition</a>.
         <a href="https://soundcloud.com/emma_oneil">SoundCloud</a>.</p>
