--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <img src="./images/coursework.png" alt="Coursework" style="width:15px;height:15px;padding-right:10px;"><a href="https://airtable.com/shrD95EC5EwYTAbmW">Coursework</a>
       </header>
       <section>
-        <p>I currently conduct research on collaborative care for people with serious mental illness and cancer at Massachusetts General Hospital. In June, I will be starting as a Clinical Research Coordinator in the <a href="https://www.massgeneral.org/cancer-center/clinical-trials-and-research/cancer-outcomes-research">Cancer Outcomes Research and Education Program</a>. I graduated in December 2022 with a dual degree from <a href="https://www.wharton.upenn.edu/">The Wharton School</a> and
-          <a href="https://www.upenn.edu/">University of Pennsylvania</a>, where I majored in Statistics, Cognitive Science, and Computer Science and minored in Mathematics. This past year, I completed pre-medical postbaccalaureate coursework at Harvard. 
+          <p>I am a Clinical Research Coordinator at Massachusetts General Hospital in the <a href="https://www.massgeneral.org/cancer-center/clinical-trials-and-research/cancer-outcomes-research">Cancer Outcomes Research and Education Program</a>, working on research on collaborative care for people with serious mental illness and cancer. 
+            I graduated in December 2022 with a dual degree from <a href="https://www.wharton.upenn.edu/">The Wharton School</a> and <a href="https://www.upenn.edu/">University of Pennsylvania</a>, where I majored in Statistics, Cognitive Science, and Computer Science and minored in Mathematics. This past year, I completed pre-medical postbaccalaureate coursework at Harvard. 
 
         <p>I am particularly passionate about mental health research, policy, and technology as well as questions in precision medicine, machine-in-the-loop systems in healthcare, psychiatry, integrated care, physician-patient interaction, and health equity. 
           My research experience lies within health services, human-computer interaction, machine learning, natural language processing, and computational social science.
