remove erroneous link

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
         <p><b>MindCORE Lila R. Gleitman Fellowship | June 2019 - Aug. 2019</b><br>
         Piloted study examining whether people find it more difficult to make predictions for people who think differently from them. 
         Presented 15-minute talk at research symposium. Advised by Prof. John McCoy. 
-        <a href="https://docs.google.com/presentation/d/1lJBOgjke5geZbdwsBAH24VCbugxAgrdg/edit?usp=sharing&ouid=104991045083918685632&rtpof=true&sd=true">Slides</a>.</p>
+        <!-- <a href="https://docs.google.com/presentation/d/1lJBOgjke5geZbdwsBAH24VCbugxAgrdg/edit?usp=sharing&ouid=104991045083918685632&rtpof=true&sd=true">Slides</a>. -->
+      </p>
 
         <p><b>USC Brain and Creativity Institute | June 2016 - June 2018</b><br>
         Conducted literature review of the effects of musical training on early reading development. Advised by Prof. Assal Habibi.</p>
